--- a/cube_3d/index.html
+++ b/cube_3d/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <style>
         body {
             display: flex;
@@ -17,7 +18,6 @@
             height: 100vh;
             font-family: sans-serif;
         }
-
         .cube {
             position: relative;
             width: 200px;
@@ -29,52 +29,54 @@
             text-align: center;
             animation: rotateCube 10s infinite linear;
         }
-
         .cube .face {
             position: absolute;
             width: 200px;
             height: 200px;
-            background-color: rgba(44, 50, 217, 0.8);
+            background-color: rgba(44,50,217, 0.8);
             border: 1px solid #333;
             box-sizing: border-box;
             opacity: 0.9;
         }
-
         .cube .face.front {
             transform: translateZ(100px);
         }
-
         .cube .face.back {
-            transform: translateZ(-100px) rotateY(180deg);
+            transform: translateZ(-100px)
+            rotateY(180deg);
         }
-
         .cube .face.right {
-            transform: rotateY(90deg) translateZ(100px);
+            transform: rotateY(90deg)
+            translateZ(100px);
         }
-
         .cube .face.left {
-            transform: rotateY(-90deg) translateZ(100px);
+            transform: rotateY(-90deg)
+            translateZ(100px);
         }
-
         .cube .face.top {
-            transform: rotateX(90deg) translateZ(100px);
+            transform: rotateX(90deg)
+            translateZ(100px);
         }
-
         .cube .face.bottom {
-            transform: rotateX(-90deg) translateZ(100px);
+            transform: rotateX(-90deg)
+            translateZ(100px);
         }
-
         .cube.rotated {
-            transform: rotateX(45deg) rotateY(45deg) rotateZ(45deg);
+            transform: rotateX(45deg)
+            rotateY(45deg) 
+            rotatez(45deg);
         }
 
         @keyframes rotateCube {
             0% {
-                transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+                transform: rotateX(0deg)
+                rotateY(0deg)
+                rotateZ(0deg);
             }
-
             100% {
-                transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+                transform: rotateX(360deg)
+                rotateY(360deg)
+                rotateZ(360deg);
             }
         }
     </style>
